; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/connection/extr_connection_configuration.c_GetConnParam.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/connection/extr_connection_configuration.c_GetConnParam.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i8**, i32* }

@ConnParams = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @GetConnParam(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  store i64 0, i64* %4, align 8
  br label %5

5:                                                ; preds = %23, %1
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ConnParams, i32 0, i32 0), align 8
  %8 = icmp ult i64 %6, %7
  br i1 %8, label %9, label %26

9:                                                ; preds = %5
  %10 = load i8*, i8** %3, align 8
  %11 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ConnParams, i32 0, i32 2), align 8
  %12 = load i64, i64* %4, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @strcmp(i8* %10, i32 %14)
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %9
  %18 = load i8**, i8*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ConnParams, i32 0, i32 1), align 8
  %19 = load i64, i64* %4, align 8
  %20 = getelementptr inbounds i8*, i8** %18, i64 %19
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %2, align 8
  br label %27

22:                                               ; preds = %9
  br label %23

23:                                               ; preds = %22
  %24 = load i64, i64* %4, align 8
  %25 = add i64 %24, 1
  store i64 %25, i64* %4, align 8
  br label %5

26:                                               ; preds = %5
  store i8* null, i8** %2, align 8
  br label %27

27:                                               ; preds = %26, %17
  %28 = load i8*, i8** %2, align 8
  ret i8* %28
}

declare dso_local i64 @strcmp(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
